--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
     ],
     "require": {
         "php": "^5.3 || ^7.0",
-        "joomla/framework": "^1.1"
+        "joomla/framework": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8",
