--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ matrix:
         - php: 5.4
         - php: 5.5
         - php: 5.6
+          env:
+            - CS_CHECK=true
         - php: 7
         - php: hhvm
     allow_failures:
