--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8",
+        "mockery/mockery": "dev-master",
         "squizlabs/php_codesniffer": "^2.3"
     },
     "autoload": {
