2016-10-31 AC: Modifies the composer.json file.

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "authors": [
         {
             "name": "Doug Bierer",
-            "email": "doug@unlikelysource.org",
+            "email": "doug@unlikelysource.com",
             "homepage": "http://unlikelysource.net/"
         },
         {
