--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -13,7 +13,9 @@
     <filter>
         <whitelist processUncoveredFilesFromWhitelist="true">
             <!-- <directory suffix=".php">.</directory> -->
-            <file>helper.php</file>
+            <file>sefv2/helper.php</file>
+            <file>sefv2/modsimpleemailform.php</file>
+            <file>sef/modsimpleemailform.php</file>
         </whitelist>
     </filter>
     <!-- <logging>
