--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ matrix:
         - php: hhvm
     allow_failures:
         - php: hhvm
+        - php: 7
         
 before_install:
     - phpenv config-rm xdebug.ini || return 0
