--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,9 @@
         "phpunit/phpunit": "^4.8",
         "mockery/mockery": "dev-master",
         "squizlabs/php_codesniffer": "^2.3",
-        "codeception/codeception": "^2.2"
+        "se/selenium-server-standalone": "^2.53",
+        "codeception/codeception": "^2.2",
+        "joomla-projects/joomla-browser": "v3.6.5.1"
     },
     "autoload": {
         "psr-0": {
@@ -45,18 +47,25 @@
             "sefv2": "./sefv2",
             "joomla": "./lib"
         },
-        "classmap": ["./", "./test"],
+        "classmap": [
+            "./",
+            "./tests/unit"
+        ],
         "exclude-from-classmap": [
-            "./vendor/codeception"
+            "./vendor/codeception",
+            "./vendor/joomla-projects",
+            "./vendor/consolidation"
         ]
     },
     "scripts": {
         "check": [
             "@cs",
-            "@test"
+            "@test",
+            "@cc"
         ],
         "cs": "phpcs",
         "cs-fix": "phpcbf",
-        "test": "phpunit"
+        "test": "phpunit",
+        "cc": "codecept run acceptance"
     }
 }
