--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -1,6 +1,26 @@
 class_name: AcceptanceTester
 modules:
     enabled:
-        - PhpBrowser:
-            url: http://localhost/joomla/
-        - \Helper\Acceptance
+        - JoomlaBrowser
+        - Helper\Acceptance
+    config:
+        JoomlaBrowser:
+            url: 'http://localhost:8181/'          # the url that points to the joomla installation at /tests/system/joomla-cms
+            browser: 'firefox'
+            window_size: 1024x768
+            capabilities:
+              unexpectedAlertBehaviour: 'accept'
+            username: 'admin'                                  # UserName for the Administrator
+            password: 'admin'                                  # Password for the Administrator
+            database host: 'localhost'                         # place where the Application is Hosted #server Address
+            database user: 'root'                              # MySQL Server user ID, usually root
+            database password: ''                              # MySQL Server password, usually empty or root
+            database name: 'joomlatest'                        # DB Name, at the Server
+            database type: 'mysqli'                            # type in lowercase one of the options: MySQL\MySQLi\PDO
+            database prefix: 'jtc7_'                           # DB Prefix for tables
+            install sample data: 'No'                          # Do you want to Download the Sample Data Along with Joomla Installation, then keep it Yes
+            sample data: 'Default English (GB) Sample Data'    # Default Sample Data
+            admin email: 'root@localhost'                      # email Id of the Admin
+            language: 'English (United Kingdom)'               # Language in which you want the Application to be Installed
+            joomla folder: '/tmp/joomla'                       # Path to Joomla installation where we execute the tests
+
