--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,12 @@ cache:
 services:
   - mysql
 
+addons:
+  firefox: "31.6"
+
 matrix:
     fast_finish: true
     include:
-        - php: 5.4
         - php: 5.5
         - php: 5.6
           env:
