--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ matrix:
         - php: 7
         
 before_install:
+    - export DISPLAY=localhost:0.0
     - phpenv config-rm xdebug.ini || return 0
     - travis_retry composer self-update
     - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1024x768x16"
