--- a/.travis.yml
+++ b/.travis.yml
@@ -29,16 +29,15 @@ matrix:
         
 before_install:
     - phpenv config-rm xdebug.ini || return 0
-    - travis_retry composer self-update
+    - sudo apt-get -qq update
     # "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1024x768x16"
     # XVFB
-    - "export DISPLAY=:99.0"
-    - "Xvfb :99.0 -extension RANDR > /dev/null &"
+    - export DISPLAY=:99.0
+    - Xvfb :99.0 -extension RANDR > /dev/null &
     # Window manager
-    - echo "c10"
-    - "sudo apt-get install fluxbox -y --force-yes"
-    - echo "c11"
-    - "fluxbox &"
+    - sudo apt-get install -y fluxbox
+    - fluxbox &
+    - travis_retry composer self-update
     - $TRAVIS_BUILD_DIR/codeception-setup.sh
     - sleep 30 # gives enough time to Selenium to start
     
