--- a/.travis.yml
+++ b/.travis.yml
@@ -29,17 +29,14 @@ matrix:
         
 before_install:
     - phpenv config-rm xdebug.ini || return 0
-    - sudo apt-get -qq update
     # "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1024x768x16"
     # XVFB
-    - export DISPLAY=:99.0
-    - Xvfb :99.0 -extension RANDR > /dev/null &
-    # Window manager
-    - sudo apt-get install -y fluxbox
-    - fluxbox &
+    - "export DISPLAY=:99.0"
+    - "sh -e /etc/init.d/xvfb start"
+    - sleep 5 # give xvfb some time to start
     - travis_retry composer self-update
     - $TRAVIS_BUILD_DIR/codeception-setup.sh
-    - sleep 30 # gives enough time to Selenium to start
+    - sleep 5 # gives enough time to Selenium to start
     
 install:
     - travis_retry composer install --no-interaction
