--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,11 @@
 # git files
 .gitattributes export-ignore
 .gitignore export-ignore
+# buildpath files
+.buildpath export-ignore
+# project files and settings
+.project export-ignore
+.settings
 # composer files
 composer.* export-ignore
 # travis file
@@ -10,6 +15,9 @@ composer.* export-ignore
 phpunit.* export-ignore
 # CodeSniffer files
 phpcs.* export-ignore
+# Codeception files
+codeception.* export-ignore
+codeception-setup.* export-ignore
 # general text files
 *README.txt export-ignore
 *readme.md export-ignore
@@ -35,8 +43,10 @@ INSTALL*.txt export-ignore
 # libs
 lib export-ignore
 # tests
-test export-ignore
+tests export-ignore
 # docs
 docs export-ignore
+# vendor
+vendor export-ignore
 # scripts
 createpack.sh export-ignore
