--- a/.travis.yml
+++ b/.travis.yml
@@ -24,16 +24,29 @@ addons:
 matrix:
     fast_finish: true
     include:
+        - php: 5.4
+          env:
+            - TEST_CHECK=false
+            - CS_CHECK=true
+            - CC_CHECK=true
         - php: 5.5
+          env:
+            - TEST_CHECK=true
+            - CS_CHECK=true
+            - CC_CHECK=true
         - php: 5.6
           env:
+            - TEST_CHECK=true
             - CS_CHECK=true
             - CC_CHECK=true
         - php: 7
+          env:
+            - TEST_CHECK=false
+            - CS_CHECK=true
+            - CC_CHECK=true
         - php: hhvm
     allow_failures:
         - php: hhvm
-        - php: 7
         
 before_install:
     - phpenv config-rm xdebug.ini || return 0
@@ -49,6 +62,6 @@ install:
     - travis_retry composer install --no-interaction
     
 script:
-    - composer test
+    - if [[ $TEST_CHECK == 'true' ]]; then composer test ; fi
     - if [[ $CS_CHECK == 'true' ]]; then composer cs ; fi
     - if [[ $CC_CHECK == 'true' ]]; then composer cc ; fi
