--- a/.gitattributes
+++ b/.gitattributes
@@ -15,6 +15,8 @@ composer.* export-ignore
 phpunit.* export-ignore
 # CodeSniffer files
 phpcs.* export-ignore
+# phpDocumentor files
+phpdoc.* export-ignore
 # Codeception files
 codeception.* export-ignore
 codeception-setup.* export-ignore
@@ -46,6 +48,8 @@ lib export-ignore
 tests export-ignore
 # docs
 docs export-ignore
+# docs-api
+docs-api export-ignore
 # vendor
 vendor export-ignore
 # scripts
