--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,8 @@
         "se/selenium-server-standalone": "^2.53",
         "codeception/codeception": "^2.2",
         "joomla-projects/joomla-browser": "v3.6.5.1",
-        "phpdocumentor/phpdocumentor": "2.9.0"
+        "phpdocumentor/phpdocumentor": "2.9.0",
+        "pds/skeleton": "~1.0"
     },
     "autoload": {
         "psr-0": {
