--- a/.travis.yml
+++ b/.travis.yml
@@ -35,12 +35,13 @@ matrix:
             - CC_CHECK=true
         - php: 5.6
           env:
-            - TEST_CHECK=true
+            - COMPOSER_PROCESS_TIMEOUT=600
+            - TEST_CHECK_COVER=true
             - CS_CHECK=true
             - CC_CHECK=true
+            - CODECLIMATE_REPO_TOKEN=cdf9d20bb5113bdc18f79b722ca5a54c965e2ccae2912ba40d92d0651cf8affa
         - php: 7
           env:
-            - TEST_CHECK=false
             - CS_CHECK=true
             - CC_CHECK=true
         - php: hhvm
@@ -48,14 +49,13 @@ matrix:
         - php: hhvm
         
 before_install:
-    - phpenv config-rm xdebug.ini || return 0
     # XVFB
     - "export DISPLAY=:99.0"
     - "sh -e /etc/init.d/xvfb start"
     - sleep 5 # give xvfb some time to start
     - travis_retry composer self-update
-    - if [[ $TEST_CHECK == 'false' ]]; then rm $TRAVIS_BUILD_DIR/composer.json ; fi
-    - if [[ $TEST_CHECK == 'false' ]]; then mv $TRAVIS_BUILD_DIR/composer.php54.json $TRAVIS_BUILD_DIR/composer.json ; fi
+    - if [[ $TEST_CHECK == 'false' ]]; then rm $TRAVIS_BUILD_DIR/composer.json && mv $TRAVIS_BUILD_DIR/composer.php54.json $TRAVIS_BUILD_DIR/composer.json ; fi
+    - if [[ -z "$TEST_CHECK_COVER" ]]; then phpenv config-rm xdebug.ini || return 0 ; fi
     - $TRAVIS_BUILD_DIR/bin/codeception-setup.sh
     - sleep 5 # gives enough time to Selenium to start
     
@@ -64,5 +64,9 @@ install:
     
 script:
     - if [[ $TEST_CHECK == 'true' ]]; then composer test ; fi
+    - if [[ $TEST_CHECK_COVER == 'true' ]]; then composer test-cover ; fi
     - if [[ $CS_CHECK == 'true' ]]; then composer cs ; fi
     - if [[ $CC_CHECK == 'true' ]]; then composer cc ; fi
+
+after_success:
+    - if [[ $TEST_CHECK_COVER == 'true' ]]; then composer test-report ; fi
