--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,9 @@
         "joomla/framework": "1.1.0",
         "phpunit/phpunit": "4.8.32",
         "mockery/mockery": "0.9.7",
+        "psr/log": "1.0.0",
+        "codeclimate/php-test-reporter": "0.2.0",
+        "satooshi/php-coveralls": "~0.6",
         "squizlabs/php_codesniffer": "^2.3",
         "se/selenium-server-standalone": "^2.53",
         "codeception/codeception": "^2.2",
@@ -68,6 +71,8 @@
         "cs": "phpcs",
         "cs-fix": "phpcbf",
         "test": "phpunit",
+        "test-cover": "phpunit --coverage-clover build/logs/clover.xml",
+        "test-report": "test-reporter --coverage-report build/logs/clover.xml",
         "cc": "codecept run acceptance",
         "apidocs": "phpdoc --template=responsive-twig"
     }
