2017-12-22 AC: Fixes the exclude_patterns parameter for CodeClimate.

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -15,14 +15,25 @@ ratings:
   paths:
   - "**.php"
 
-exclude_paths:
-  - "bin/"
-  - "build/"
-  - "docs/"
-  - "docs-api/"
-  - "language_files/"
-  - "lib/"
-  - "sef/"
-  - "tests/"
-  - "tmpl/"
-  - "vendor/"
+exclude_patterns:
+- "config/"
+- "db/"
+- "dist/"
+- "features/"
+- "**/node_modules/"
+- "script/"
+- "**/spec/"
+- "**/test/"
+- "**/tests/"
+- "**/vendor/"
+- "**/*_test.go"
+- "**/*.d.ts"
+- "bin/"
+- "build/"
+- "docs/"
+- "docs-api/"
+- "language_files/"
+- "lib/"
+- "sef/"
+- "tests/"
+- "tmpl/"
