--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,7 +1,40 @@
 ---
+version: "2"         # required to adjust maintainability checks
+checks:
+  argument-count:
+    config:
+      threshold: 15
+  complex-logic:
+    config:
+      threshold: 15
+  file-lines:
+    config:
+      threshold: 1000
+  method-complexity:
+    config:
+      threshold: 50
+  method-count:
+    config:
+      threshold: 50
+  method-lines:
+    config:
+      threshold: 150
+  nested-control-flow:
+    config:
+      threshold: 4
+  return-statements:
+    config:
+      threshold: 5
+  similar-code:
+    config:
+      threshold: # language-specific defaults. an override will affect all languages.
+  identical-code:
+    config:
+      threshold: # language-specific defaults. an override will affect all languages.
+
 engines:
   duplication:
-    enabled: true
+    enabled: false
     config:
       languages:
         php:
@@ -10,6 +43,13 @@ engines:
     enabled: true
     config:
       standard: PSR2
+    checks:
+      PSR1 Files SideEffects FoundWithSymbols:
+        enabled: false
+      PSR1 Classes ClassDeclaration MissingNamespace:
+        enabled: false
+      Squiz Classes ValidClassName NotCamelCaps:
+        enabled: false
 
 ratings:
   paths:
