2018-05-26 AC: Updates the .gitignore file.

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
-vendor/
-data/
-composer.lock
 .settings/
 .project
 .buildpath
 deployment.xml
 deployment.properties
 .idea/
+vendor/*
+data/*
+docs/_build/*
 tests/_output/*
